--- a/running/index.html
+++ b/running/index.html
@@ -353,11 +353,11 @@
         const paceData = {
             "Recovery": "9:40+ min/mi",
             "Aerobic": "9:00 - 9:35 min/mi",
-            "Endurance": "8:38 - 9:47 min/mi",
-            "Threshold": "7:17 - 7:29 min/mi",
-            "VO2 Max": "6:42 - 7:05 min/mi",
+            "Endurance": "8:40 - 9:40 min/mi",
+            "Threshold": "7:15 - 7:30 min/mi",
+            "VO2 Max": "6:40 - 7:00 min/mi",
             "Progression": "Start ~9:20, finish ~7:20",
-            "Race Pace": "7:17 - 7:29 min/mi",
+            "Race Pace": "7:00 - 7:20 min/mi",
             "B Race": "See specific race paces",
             "A Race": "Goal Race",
             "Rest": "N/A",
@@ -366,11 +366,11 @@
         };
         
         const racePaceData = {
-            "Frosty 5k": "~6:45 min/mi",
-            "Manhattan 10k": "7:00 - 7:10 min/mi",
-            "Shamrock Mile": "~6:20 min/mi",
-            "Shamrock Shuffle 8k": "~6:55 min/mi",
-            "Half Marathon": "Goal Race"
+            "Frosty 5k": "6:45 min/mi",
+            "Manhattan 10k": "6:55 min/mi",
+            "Shamrock Mile": "5:50 min/mi",
+            "Shamrock Shuffle 8k": "6:45 min/mi",
+            "Half Marathon": "7:10 min/mi"
         };
 
         document.addEventListener('DOMContentLoaded', () => {
