--- a/running/index.html
+++ b/running/index.html
@@ -92,8 +92,8 @@
 <body class="bg-gray-50 p-4 sm:p-6 md:p-8">
     <div class="max-w-7xl mx-auto">
         <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-gray-800">Avery's 2026 NYC Half Training Plan</h1>
-            <p id="goal-subtitle" class="text-md text-gray-500 mt-1">Pfitz HM Plan 30-55 mpw (Modified)</p>
+            <h1 class="text-3xl sm:text-4xl font-bold text-gray-800">2026 NYC Half Training Plan</h1>
+            <p id="goal-subtitle" class="text-md text-gray-500 mt-1">Pfitz Build to 35 / 35-50 HM Plan</p>
         </header>
 
         <!-- Dashboard Section -->
