--- a/tri/index.html
+++ b/tri/index.html
@@ -147,7 +147,7 @@
                 { day: "M", swim: null, bike: null, run: "1:45 Z1-2" },
                 { day: "Tu", swim: "#11", bike: null, run: "60 Z2" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#12", bike: "60 Z2 (at 10 insert 10x2 Z4 hills @ spin down)", run: null },
+                { day: "Th", swim: "#12", bike: "60 Z2 (at 10 insert 10x2 Z4 hills @ spin)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: "30 Z1 (100+ rpm)", run: "2:15 Z1-2" },
                 { day: "Su", swim: null, bike: "3:15 Z2 (at 3:00 insert 10 Z4)", run: "15 Z2", isBrick: true },
@@ -183,7 +183,7 @@
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
                 { day: "Tu", swim: "Aquathlon (1500 m)", bike: null, run: "Aquathlon (5k)" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#13", bike: "60 Z2 (at 10 insert 8x3 Z4 hills @ spin down)", run: null },
+                { day: "Th", swim: "#13", bike: "60 Z2 (at 10 insert 8x3 Z4 hills @ spin)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: "30 Z1 (100+ rpm)", run: "2:15 Z1-2" },
                 { day: "Su", swim: null, bike: "3:15 Z2 (at 2:30 insert 40 Z3)", run: "15 Z2", isBrick: true },
