--- a/tri/index.html
+++ b/tri/index.html
@@ -136,7 +136,7 @@
             ]},
             { week: 5, dates: "Apr 20 - Apr 26", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
-                { day: "Tu", swim: "#9", bike: "60 Z2 (at 10 insert 5x1 PU @ 1 spin)", run: null },
+                { day: "Tu", swim: "#9", bike: "60 Z2 (at 10, 5x1 PU @ 1 spin)", run: null },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
                 { day: "Th", swim: "#10", bike: null, run: null },
                 { day: "F", swim: "30 easy", bike: null, run: "60 Z1-2 (with 5x1 PU @ 1 jog)" },
@@ -147,23 +147,23 @@
                 { day: "M", swim: null, bike: null, run: "1:45 Z1-2" },
                 { day: "Tu", swim: "#11", bike: null, run: "60 Z2" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#12", bike: "60 Z2 (at 10 insert 10x2 Z4 hills @ spin)", run: null },
+                { day: "Th", swim: "#12", bike: "60 Z2 (at 10, 10x2 Z4 hills @ spin down)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: "30 Z1 (100+ rpm)", run: "2:15 Z1-2" },
-                { day: "Su", swim: null, bike: "3:15 Z2 (at 3:00 insert 10 Z4)", run: "15 Z2", isBrick: true },
+                { day: "Su", swim: null, bike: "3:15 Z2 (at 3:00, 10 Z4)", run: "15 Z2", isBrick: true },
             ]},
             { week: 7, dates: "May 4 - May 10", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
-                { day: "Tu", swim: "#13", bike: null, run: "60 Z2 (at 45 insert 10 Z4)" },
+                { day: "Tu", swim: "#13", bike: null, run: "60 Z2 (at 45, 10 Z4)" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#14", bike: "60 Z2 (at 10 insert 6x4 Z4 @ 2 spin)", run: null },
+                { day: "Th", swim: "#14", bike: "60 Z2 (at 10, 6x4 Z4 @ 2 spin)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: null, run: "1:45 Z1-2" },
-                { day: "Su", swim: null, bike: "4:15 Z2 (at 3:55 insert 15 Z4)", run: "45 Z2", isBrick: true },
+                { day: "Su", swim: null, bike: "4:15 Z2 (at 3:55, 15 Z4)", run: "45 Z2", isBrick: true },
             ]},
             { week: 8, dates: "May 11 - May 17", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
-                { day: "Tu", swim: "#15", bike: null, run: "60 Z2 (at 10 insert 8x3 Z4 @ 1.5 jog)" },
+                { day: "Tu", swim: "#15", bike: null, run: "60 Z2 (at 10, 8x3 Z4 @ 1.5 jog)" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
                 { day: "Th", swim: "#9", bike: "60 Z2", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
@@ -172,37 +172,37 @@
             ]},
             { week: 9, dates: "May 18 - May 24", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
-                { day: "Tu", swim: "#10", bike: null, run: "60 Z2 (at 40 insert 12.5 Z4)" },
+                { day: "Tu", swim: "#10", bike: null, run: "60 Z2 (at 40, 12.5 Z4)" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#11", bike: "60 Z2 (at 10 insert 5x5 Z4 @ 2.5 spin)", run: null },
+                { day: "Th", swim: "#11", bike: "60 Z2 (at 10, 5x5 Z4 @ 2.5 spin)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: null, run: "1:45 Z1-2" },
-                { day: "Su", swim: null, bike: "4:15 Z2 (at 3:50 insert 20 Z4)", run: "45 Z2", isBrick: true },
+                { day: "Su", swim: null, bike: "4:15 Z2 (at 3:50, 20 Z4)", run: "45 Z2", isBrick: true },
             ]},
             { week: 10, dates: "May 25 - May 31", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
                 { day: "Tu", swim: "Aquathlon (1500 m)", bike: null, run: "Aquathlon (5k)" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#13", bike: "60 Z2 (at 10 insert 8x3 Z4 hills @ spin)", run: null },
+                { day: "Th", swim: "#13", bike: "60 Z2 (at 10, 8x3 Z4 hills @ spin down)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: "30 Z1 (100+ rpm)", run: "2:15 Z1-2" },
-                { day: "Su", swim: null, bike: "3:15 Z2 (at 2:30 insert 40 Z3)", run: "15 Z2", isBrick: true },
+                { day: "Su", swim: null, bike: "3:15 Z2 (at 2:30, 40 Z3)", run: "15 Z2", isBrick: true },
             ]},
             { week: 11, dates: "June 1 - June 7", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
-                { day: "Tu", swim: "#14", bike: null, run: "60 Z2 (at 40 insert 15 Z4)" },
+                { day: "Tu", swim: "#14", bike: null, run: "60 Z2 (at 40, 15 Z4)" },
                 { day: "W", swim: null, bike: "45 Z2", run: "15 Z2", isBrick: true },
-                { day: "Th", swim: "#15", bike: "60 Z2 (at 10 insert 3x7.5 Z4 @ 3.5 spin)", run: null },
+                { day: "Th", swim: "#15", bike: "60 Z2 (at 10, 3x7.5 Z4 @ 3.5 spin)", run: null },
                 { day: "F", swim: null, bike: null, run: "Rest Day" },
                 { day: "Sa", swim: null, bike: "2:15 Z2", run: "15 Z2", isBrick: true },
                 { day: "Su", swim: null, bike: null, run: "Chicago 13.1"},
             ]},
             { week: 12, dates: "June 8 - June 14", workouts: [
                 { day: "M", swim: null, bike: null, run: "Rest Day" },
-                { day: "Tu", swim: "30 easy", bike: null, run: "45 Z1-2 (at 10 insert 5x1 PU @ 1 jog)" },
+                { day: "Tu", swim: "30 easy", bike: null, run: "45 Z1-2 (at 10, 5x1 PU @ 1 jog)" },
                 { day: "W", swim: null, bike: "45 Z1-2", run: "15 Z1-2", isBrick: true },
-                { day: "Th", swim: "30 easy", bike: "60 Z1 (at 10 insert 5x1 PU @ 1 spin)", run: null },
-                { day: "F", swim: null, bike: null, run: "40 Z1 (at 10 insert 5x1 PU @ 1 jog)" },
+                { day: "Th", swim: "30 easy", bike: "60 Z1 (at 10, 5x1 PU @ 1 spin)", run: null },
+                { day: "F", swim: null, bike: null, run: "40 Z1 (at 10, 5x1 PU @ 1 jog)" },
                 { day: "Sa", swim: null, bike: "15 Z1 (bike safety check)", run: "20 Z1"},
                 { day: "Su", special: "A-RACE: Rockford 70.3", recovery: "Celebrate!"},
             ]},
