--- a/running/index.html
+++ b/running/index.html
@@ -248,7 +248,7 @@
             "2025-12-07": { type: "Endurance", details: "11 mi", quote: "Eleven miles. Last long run before that joke of a 5k next week. Run this strong. Let the race know you're coming for its soul. Make this run your little bitch.", sappy_quote: "Eleven miles of Sunday magic! You're charging up your power crystals for the Frosty 5k! Get ready to unleash dazzling energy! You're a human power-station!" },
             "2025-12-08": { type: "Rest", details: "", quote: "Rest. Frosty 5k race week. You worried about the weather? You worried about your time? Stop worrying and start hardening your mind. Fear is for the weak. Go stare at a wall and think about your failures.", sappy_quote: "Race Week Rest! The Frosty 5k awaits! Today, chill like a snowman (a very fast snowman!), conserving your cool energy for a blazing fast race! So frosty, so speedy!" },
             "2025-12-09": { type: "Aerobic", details: "8 mi", quote: "Eight miles? In race week? This plan is trying to break you. Good. Let's see if it works. Run it slow, you moron. This is a test of discipline, not your pathetic attempt at 'speed.'", sappy_quote: "Eight miles during race week? Because you're extra! You're adding bonus sprinkles to your already amazing fitness cupcake! So delicious! You're just overflowing with awesome!" },
-            "2m025-12-10": { type: "Aerobic", details: "5 mi", quote: "Five miles. Still logging junk miles before a race. You should be resting, visualizing, sharpening the axe. Not this garbage. You're just making yourself tired. Idiot.", sappy_quote: "Five easy-breezy miles! Just keeping the legs happy and reminding them how much fun running is before the Frosty 5k adventure! Whee! Taper-time!" },
+            "2025-12-10": { type: "Aerobic", details: "5 mi", quote: "Five miles. Still logging junk miles before a race. You should be resting, visualizing, sharpening the axe. Not this garbage. You're just making yourself tired. Idiot.", sappy_quote: "Five easy-breezy miles! Just keeping the legs happy and reminding them how much fun running is before the Frosty 5k adventure! Whee! Taper-time!" },
             "2025-12-11": { type: "Recovery", details: "7 mi", quote: "Seven miles?! TWO DAYS before a 5k?! Are you actively TRYING to sabotage yourself? Run this SO SLOW people think you're walking backwards. Discipline. Or failure. Your choice.", sappy_quote: "Seven miles?! Taper? Never heard of her! You're just overflowing with energy, letting a little extra sparkle out before the big race! You're a beautiful, uncontrollable fountain of fitness!" },
             "2025-12-12": { type: "Recovery", details: "4 mi<br>4x100", quote: "Four miles recovery. Finally, something sensible. Keep it SLOW. If your grandma can't keep up, you're going too fast. 21:00 tomorrow. Or else. Don't even come back if you don't hit it.", sappy_quote: "A tiny 4-mile pre-race leg whisper! 'Shhh, legs, get ready for amazingness tomorrow!' Time to shine brighter than tinsel! You are so ready to sparkle!" },
             "2025-12-13": { type: "B Race", details: "Frosty 5k<br>goal: 21:00", totalMiles: "total 10 mi", quote: "FROSTY 5K. GOAL: 21:00. Forget the cold. Forget the pain. Forget everything but that number. Go out there and rip its head off. Take souls. Wipe your tears with their participation ribbons. STAY HARD.", sappy_quote: "Frosty 5k Race Day Extravaganza! Sparkle like freshly fallen snow! Run with the festive fury of a thousand jingle bells! 21:00 is your present! Go unwrap it with your speedy legs!" },
@@ -329,7 +329,7 @@
             "2026-02-24": { type: "Aerobic", details: "6 mi", quote: "Six miles. Taper time. Feel that energy? Good. Bottle it. Don't waste it today. Patience. Discipline. Or go run a 10-miler like an idiot and ruin everything. Your call.", sappy_quote: "First taper run feels... springy! Six happy miles bouncing along! Your legs are singing little songs of readiness! La la la, so fast, la la!" },
             "2026-02-25": { type: "Recovery", details: "5 mi", quote: "Five miles recovery. Keep it easy. Napa tune-up this weekend. Still gotta perform. No excuses. Go run this slow. Slower. Slower than that.", sappy_quote: "Five mellow miles cruising down Taper Lane! Enjoying the relaxed vibes before the Napa Half adventure! So chill, so ready! It's wine-country-run-time!" },
             "2026-02-26": { type: "Endurance", details: "12 mi", quote: "Twelve miles during the taper? This plan is still trying to hurt you. Good. Stay controlled. Don't race it. Just get it done. This is a test of discipline, not your ego.", sappy_quote: "Twelve miles?! Even tapering, you're amazing! Just reinforcing that incredible endurance base! You're solid gold, baby! A 24-karat-runner!" },
-            "2SANITY-CHECK-IGNORE": { type: "Rest", details: "", quote: "Rest. Travel day for Napa? Stay off your feet. Hydrate. Visualize the race. This is a tune-up, but it's still a test. Don't go there and embarrass yourself in wine country.", sappy_quote: "Napa Travel / Rest! Get ready for sunshine and speedy times! Pack light, run fast, and maybe enjoy a *tiny* sip of grape juice later! (Just kidding, hydrate!)" },
+            "2026-02-27": { type: "Rest", details: "", quote: "Rest. Travel day for Napa? Stay off your feet. Hydrate. Visualize the race. This is a tune-up, but it's still a test. Don't go there and embarrass yourself in wine country.", sappy_quote: "Napa Travel / Rest! Get ready for sunshine and speedy times! Pack light, run fast, and maybe enjoy a *tiny* sip of grape juice later! (Just kidding, hydrate!)" },
             "2026-02-28": { type: "Recovery", details: "4 mi<br>4x100", quote: "Four miles, four strides in Napa. Shake out the stiffness. Get a feel for the air. Tomorrow, you put on a show. Or you get exposed. Go.", sappy_quote: "Napa Shakeout Run! Four miles and strides feeling fine in the wine country! Let's get this vintage performance ready! You're a premium-label-runner!" },
             "2026-03-01": { type: "Tune-up", details: "Napa Valley HM<br>total 15 mi", quote: "Napa Half Marathon. Tune-up race. Fifteen miles total. Execute the plan. Run hard, run smart. Give NYC a preview of the pain you're bringing. Don't be a tourist.", sappy_quote: "Napa Valley Half Marathon Race Day! Run with joy through the beautiful vineyards! Let the scenery fuel your speed! Cheers to a great race! You're a running-sommelier!" },
             "2026-03-02": { type: "Rest", details: "", quote: "Rest. Napa done. Two weeks left. TWO WEEKS. This is where you lock it in. No mistakes. No weakness. Laser focus. Or throw it all away. You're good at that.", sappy_quote: "Post-Napa Rest! You ran like a champion! Soak in that California sunshine vibe and let your amazing body recover like a pro! You're a ray of sunshine yourself!" },
@@ -344,7 +344,7 @@
             "2026-03-11": { type: "Recovery", details: "5 mi", quote: "Five miles recovery. Four days. Keep the legs loose. Keep the mind sharp. Visualize the course. Visualize the finish. Visualize the suffering. It's coming.", sappy_quote: "Five easy recovery miles! Just keeping the magic flowing! You're a beautiful river of readiness, flowing towards the NYC Half ocean! So graceful, so strong!" },
             "2026-03-12": { type: "Recovery", details: "4 mi", quote: "Four miles. Travel day? Stay hydrated. Stay off your feet. The hay is in the barn, don't start building a new barn now. Don't be an idiot.", sappy_quote: "Four gentle miles! Maybe you're in NYC! Feel the electricity! The city is getting ready for YOU! Shine bright, superstar! You're the main attraction!" },
             "2026-03-13": { type: "Rest", details: "", quote: "Rest. Two days. Expo? Fine. Get your bib. Leave. Don't linger. Don't buy stupid crap you don't need. Don't walk 10 miles. Focus. Stay off your feet.", sappy_quote: "Two Days To Go! Rest up! Let the anticipation build! You're a perfectly wrapped present, ready to be opened on race day! What a gift you are!" },
-            "2s026-03-14": { type: "Recovery", details: "3 mi<br>4x100", quote: "Final shakeout. Three miles, four strides. Snappy. Light. Ready. Tomorrow, you unleash hell. No prisoners. No survivors. Just you and 1:30.", sappy_quote: "Race Eve! Three miles + four strides = Final Sparkle Activation! Every system is GO! Get ready for an amazing launch tomorrow! T-minus one day to awesome!" },
+            "2026-03-14": { type: "Recovery", details: "3 mi<br>4x100", quote: "Final shakeout. Three miles, four strides. Snappy. Light. Ready. Tomorrow, you unleash hell. No prisoners. No survivors. Just you and 1:30.", sappy_quote: "Race Eve! Three miles + four strides = Final Sparkle Activation! Every system is GO! Get ready for an amazing launch tomorrow! T-minus one day to awesome!" },
             "2026-03-15": { type: "A Race", details: "NYC Half<br>goal: 1:30", totalMiles: "total 15 mi", quote: "NYC HALF. 1:30. You think this city is impressed with you? It's not. It's waiting to eat you alive. This isn't a race; it's a 13.1-mile fistfight with your own weakness. I want you to run so hard you make the pavement bleed. I want you to take that 1:30 goal, hunt it down, and execute it in cold blood. Make Times Square look like a quiet suburb compared to the violence in your heart. Go take this city's soul. NOW.", sappy_quote: "RACE DAY! NYC HALF! IT'S HEEERE! You are a human sunrise, lighting up the streets of Manhattan! You are a magical Broadway show, and your legs are the stars! Let your 1:30 goal time sparkle brighter than the top of the Empire State Building! Run with so much joy that the Statue of Liberty herself waves at you! YOU ARE A MIRACLE ON 42ND STREET!" },
             "2026-03-16": { type: "Rest", details: "", quote: "It's over. You conquered NYC or it conquered you. Doesn't matter now. Recover. Heal. Assess the damage. The war never ends. And you got two races this weekend, you psycho. What's wrong with you?", sappy_quote: "NYC HALF FINISHER! YOU ARE AMAZING! Wear that medal with pride! Rest those heroic legs! You deserve ALL the celebration! You're a New York SUPERSTAR!" },
             "2026-03-17": { type: "Rest", details: "", quote: "St. Patrick's Day. Still resting? You finished ONE race. Don't milk it. You got two more this weekend. Start thinking about the Shamrock Mile pain. Go find a four-leaf clover. You'll need the luck, softy.", sappy_quote: "Happy St. Patrick's Day! Still glowing from NYC! Enjoy this lucky rest day! You're a four-leaf clover of running talent! So rare, so special, so fast!" },
@@ -368,7 +368,7 @@
             "2025-12-29": "41 mi",
             "2026-01-05": "35 mi",
             "2026-01-12": "44 mi",
-            "2026-01-19": "47 mi",
+            "2D026-01-19": "47 mi",
             "2026-01-26": "39 mi",
             "2026-02-02": "47 mi",
             "2026-02-09": "50 mi",
@@ -778,8 +778,7 @@
                       }
                   }
                   
-                  // *** CHANGE 10: Force open to Phase 3 and select Shamrock Shuffle day ***
-                  initialPhaseIndex = 2; // Force Phase 3
+                  // *** REVERTED: Set currentPhaseIndex to the calculated one ***
                   currentPhaseIndex = initialPhaseIndex;
 
 
@@ -800,8 +799,14 @@
                  const planStartString = planStartDate.toISOString().split('T')[0];
                  const planEndString = planEndDate.toISOString().split('T')[0];
                  
-                 // *** CHANGE 11: Force select "2026-03-22" ***
-                 let initialSelectDateString = "2026-03-22";
+                 // *** REVERTED: Calculate initialSelectDateString based on today's date ***
+                 let initialSelectDateString = planStartString; // Default
+
+                 if (today.getTime() >= planStartDate.getTime() && today.getTime() <= planEndDate.getTime()) {
+                      initialSelectDateString = todayString;
+                  } else if (today.getTime() > planEndDate.getTime()) {
+                      initialSelectDateString = planEndString;
+                  } // Else default (before plan start) is planStartString
 
                  updateGogginsButton();
 
@@ -810,9 +815,15 @@
                      if (initialElement && !initialElement.classList.contains('grid-placeholder')) {
                          selectDay(initialSelectDateString, initialElement);
                      } else {
-                          // Fallback just in case
-                          const fallbackElement = document.getElementById(`day-${planEndString}`);
-                          if (fallbackElement) selectDay(planEndString, fallbackElement);
+                          // Fallback logic if today's date element isn't found in the initial render
+                         const firstDayOfInitialPhase = phases[initialPhaseIndex].start;
+                         const firstDayElement = document.getElementById(`day-${firstDayOfInitialPhase}`);
+                         if (firstDayElement && !firstDayElement.classList.contains('grid-placeholder')) {
+                             selectDay(firstDayOfInitialPhase, firstDayElement);
+                         } else {
+                              const fallbackElement = document.getElementById(`day-${planStartString}`);
+                              if (fallbackElement) selectDay(planStartString, fallbackElement);
+                         }
                      }
                   }, 0);
              }
@@ -822,3 +833,4 @@
     </script>
 </body>
 </html>
+
