--- a/running/index.html
+++ b/running/index.html
@@ -368,7 +368,7 @@
             "2025-12-29": "41 mi",
             "2026-01-05": "35 mi",
             "2026-01-12": "44 mi",
-            "2D026-01-19": "47 mi",
+            "2026-01-19": "47 mi",
             "2026-01-26": "39 mi",
             "2026-02-02": "47 mi",
             "2026-02-09": "50 mi",
@@ -382,19 +382,19 @@
         const workoutColors = {
             "Rest": "bg-gray-100 text-gray-800", "Aerobic": "bg-cyan-100 text-cyan-800",
             "Endurance": "bg-yellow-100 text-yellow-800",
-            "Threshold": "bg-orange-100 text-orange-800", "Progression": "bg-yellow-100 text-yellow-800",
+            "Threshold": "bg-orange-100 text-orange-800", "Progression": "bg-indigo-100 text-indigo-800",
             "VO2 Max": "bg-red-200 text-red-800", "Recovery": "bg-green-100 text-green-800",
             "Race Pace": "bg-red-200 text-red-800", "A Race": "race-a", "B Race": "race-b",
-            "Tune-up": "bg-yellow-100 text-yellow-800",
+            "Tune-up": "bg-indigo-100 text-indigo-800",
             "Bike": "bg-blue-100 text-blue-800", "Brick": "bg-teal-100 text-teal-800"
         };
         const workoutTextColors = {
              "Rest": "text-gray-500", "Aerobic": "text-cyan-600",
             "Endurance": "text-yellow-700",
-            "Threshold": "text-orange-600", "Progression": "text-yellow-700",
+            "Threshold": "text-orange-600", "Progression": "text-indigo-600",
             "VO2 Max": "text-red-600", "Recovery": "text-green-600",
             "Race Pace": "text-red-600", "A Race": "text-white", "B Race": "text-white",
-            "Tune-up": "text-yellow-700",
+            "Tune-up": "text-indigo-600",
             "Bike": "text-blue-600", "Brick": "text-teal-600"
         };
 
@@ -833,4 +833,5 @@
     </script>
 </body>
 </html>
+
 
